reface: use post method to avoid privacy data expose
