# internal/services/accounts/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:7001",
     "basePath": "/v1/accounts",
     "paths": {
-        "/account": {
+        "/account/create": {
             "post": {
                 "description": "Create a new account",
                 "consumes": [
@@ -43,7 +43,38 @@
                 }
             }
         },
-        "/account/{id}": {
+        "/account/delete": {
+            "post": {
+                "description": "Delete an account",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Delete an account",
+                "parameters": [
+                    {
+                        "description": "Account",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Leon180_go-event-driven-microservices_internal_services_accounts_internal_accounts_features_delete_account_dtos.DeleteAccountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "account deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Leon180_go-event-driven-microservices_internal_pkg_customize_gin_response.JSONResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/account/update": {
             "put": {
                 "description": "Update an account",
                 "consumes": [
@@ -57,13 +88,6 @@
                 ],
                 "summary": "Update an account",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Account",
                         "name": "account",
@@ -82,37 +106,10 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Delete an account",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "accounts"
-                ],
-                "summary": "Delete an account",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Account ID to delete",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "account deleted successfully",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_Leon180_go-event-driven-microservices_internal_pkg_customize_gin_response.JSONResponse"
-                        }
-                    }
-                }
             }
         },
-        "/accounts/{mobile_number}": {
-            "get": {
+        "/accounts/get": {
+            "post": {
                 "description": "Get accounts by mobile number",
                 "produces": [
                     "application/json"
@@ -123,11 +120,13 @@
                 "summary": "Get accounts by mobile number",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Mobile Number",
-                        "name": "mobile_number",
-                        "in": "path",
-                        "required": true
+                        "description": "Account",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Leon180_go-event-driven-microservices_internal_services_accounts_internal_accounts_features_get_accounts_dtos.GetAccountsByMobileNumberRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -180,7 +179,7 @@
             ],
             "properties": {
                 "account_type": {
-                    "description": "@enum \"saving\", \"current\", \"salary\"",
+                    "description": "@enum \"checking\", \"savings\", \"currency\", \"salary\", \"business\"",
                     "type": "string"
                 },
                 "branch": {
@@ -193,13 +192,41 @@
                 }
             }
         },
+        "github_com_Leon180_go-event-driven-microservices_internal_services_accounts_internal_accounts_features_delete_account_dtos.DeleteAccountRequest": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_Leon180_go-event-driven-microservices_internal_services_accounts_internal_accounts_features_get_accounts_dtos.GetAccountsByMobileNumberRequest": {
+            "type": "object",
+            "required": [
+                "mobile_number"
+            ],
+            "properties": {
+                "mobile_number": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_Leon180_go-event-driven-microservices_internal_services_accounts_internal_accounts_features_update_account_dtos.UpdateAccountRequest": {
             "type": "object",
+            "required": [
+                "id"
+            ],
             "properties": {
                 "account_number": {
                     "type": "string"
                 },
                 "branch_address": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "mobile_number": {
